<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
            android:id="@+id/btn_seeMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_seeMore"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="@color/purple_500"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
                <TextView
                    android:id="@+id/valueSensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desc"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"/>
            <Button
                android:id="@+id/btn_to_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btn_label"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>